# quizzes

./: Makefile  README.md  setup.py
cpp/: .gitignore  CMakeLists.txt  QuizzesConfig.h  QuizzesConfig.h.in  README.md
cpp/include/quizzes/: binarytree.h
cpp/src/: .gitignore  CMakeLists.txt  main.cpp
cpp/src/binarytree/: binarytree.cpp
cpp/src/linkedlist/: linkedlist.cpp  linkedlist.hpp
cpp/tests/: .gitignore  CMakeLists.txt  tests_linkedlist.cpp  tests_main.cpp
docker/: Dockerfile
githooks/: pre-commit.py
python/: README.md  requirements.in  requirements.txt  tasks.py
python/quizzes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: test_testlib.py
tests/: test_binarytrees.py  test_testlib.py  testlib.py
